Added items pagination.
