# internal/controller/restapi/v1/response/balance.go
@@ -1,0 +1,5 @@
+package response
+
+type Balance struct {
+	NewBalance float64 `json:"new_balance" example:"150.50"`
+}
